--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -25,7 +25,7 @@
       height: 5rem;
       font-weight: bold;
       line-height: 5rem;
-      color: #fff;
+      color: azure;
 
       & + a {
         margin-left: 2rem;
