--- a/src/pages/taskboard/styles.module.scss
+++ b/src/pages/taskboard/styles.module.scss
@@ -5,6 +5,20 @@
   background-color: #17181f;
   border-radius: 6px;
 
+  .warnText {
+    color: #ffb800;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    font-size: 1.1rem;
+
+    button {
+      margin-left: 5px;
+      background: transparent;
+      border: 0;
+    }
+  }
+
   form {
     display: flex;
     justify-content: center;
