fix: correção bug ao clicar no titulo da task

--- a/src/pages/taskboard/styles.module.scss
+++ b/src/pages/taskboard/styles.module.scss
@@ -13,6 +13,7 @@
     font-size: 1.1rem;
 
     button {
+      display: flex;
       margin-left: 5px;
       background: transparent;
       border: 0;
