feat: implementação server side rendering na página Donate

--- a/src/pages/donate/styles.module.scss
+++ b/src/pages/donate/styles.module.scss
@@ -12,12 +12,15 @@
   h1 {
     margin: 1rem 0;
     font-size: 2.5rem;
+    color: #122655;
   }
 
   strong {
     margin-bottom: 1rem;
     font-size: 1.1rem;
-    background-color: #eee;
+    background-color: #ffb800;
+    color: #122655;
+    border-radius: 5px;
     padding: 0.8rem;
   }
 }
