refactor: ajustes de estilização

--- a/src/components/SupportButton/styles.module.scss
+++ b/src/components/SupportButton/styles.module.scss
@@ -1,8 +1,8 @@
 
 .doanteContainer{
-  position: absolute;
-  bottom: 70px;
-  right: 50px;
+  position: fixed;
+  bottom: 4vh;
+  right: 4vh;
   z-index: 99;
 
   button{
