--- a/src/pages/taskboard/styles.module.scss
+++ b/src/pages/taskboard/styles.module.scss
@@ -1,9 +1,18 @@
 .container {
+  display: flex;
+  flex-direction: column;
+
   max-width: 1120px;
-  margin: 2rem auto;
+  height: 465px;
+  margin: 1rem auto;
   padding: 2rem;
   background-color: #17181f;
   border-radius: 6px;
+
+  section {
+    max-height: 300px;
+    overflow: auto;
+  }
 
   .warnText {
     color: #ffb800;
